--- a/portable/system/languages/CAT/language.txt
+++ b/portable/system/languages/CAT/language.txt
@@ -591,23 +591,23 @@ Text
 Text colour
 Text filez
 Text report
-==================================================================
--- Empty Files ---------------------------------------------------
--- Empty Foldrz --------------------------------------------------
--- Users ---------------------------------------------------------
-Name ------------------------- Qty --- As % ---- Size -- As % ----
--- Top 101 Largest Files -----------------------------------------
--- Top 101 Smallest Files ----------------------------------------
--- Top 101 Newest Files ------------------------------------------
--- Top 101 Oldest Files ------------------------------------------
--- File Types ----------------------------------------------------
-Kategory --------------------- Qty --- As % ---- Size -- As % ----
--- Attributes ----------------------------------------------------
-Attributes ------------------- Qty --- As % ---- Size -- As % ----
--- Foldr List ----------------------------------------------------
-Foldr ------------------------ Qty --- As % ---- Size -- As % ----
--- Magnitudes ----------------------------------------------------
--- Extension Details ---------------------------------------------
+================================================================================
+-- Empty Files -----------------------------------------------------------------
+-- Empty Foldrz ----------------------------------------------------------------
+-- Users -----------------------------------------------------------------------
+Name --------------------------------------- Qty --- As % ---- Size -- As % ----
+-- Top 101 Largest Files -------------------------------------------------------
+-- Top 101 Smallest Files ------------------------------------------------------
+-- Top 101 Newest Files --------------------------------------------------------
+-- Top 101 Oldest Files --------------------------------------------------------
+-- File Types ------------------------------------------------------------------
+Kategory ----------------------------------- Qty --- As % ---- Size -- As % ----
+-- Attributes ------------------------------------------------------------------
+Attributes --------------------------------- Qty --- As % ---- Size -- As % ----
+-- Foldr List ------------------------------------------------------------------
+Foldr -------------------------------------- Qty --- As % ---- Size -- As % ----
+-- Magnitudes ------------------------------------------------------------------
+-- Extension Details -----------------------------------------------------------
 Text report filename
 Text report savd as
 Root does not exist 
@@ -775,10 +775,11 @@ All ov teh uva table displayz
 Logz
 Lenf
 File Name Lenf (charz)
--- File Paf Lenf -------------------------------------------------
-Lenf (charz) ----------------- Qty --- As % ----- Size --- As % --
+-- File Paf Lenf ---------------------------------------------------------------
+Lenf (charz) ------------------------------- Qty --- As % ----- Size --- As % --
 No data to export: i iz sad :(
 (Dis reportz can b importy in 2 Xinorbis at latr datez)
 Warnin, dis scan haz contain virtual or offline filez
 Warnin, scan waz stopped before it haz completez
 Ignore virtual or offline folders
+Deep scan
