--- a/portable/system/languages/CZ/language.txt
+++ b/portable/system/languages/CZ/language.txt
@@ -591,23 +591,23 @@ Text
 Barva textu
 Textový soubor
 Textový report
-==================================================================
--- Prázdné soubory ---------------------------------------------------
--- Prázdné složky -------------------------------------------------
--- Uživatelé ---------------------------------------------------------
-Název ------------------------- Množství --- v % ----- Velikost --- v % --
--- Top 101 největších souborů-----------------------------------------
--- Top 101 nejmenších souborů ----------------------------------------
--- Top 101 nejnovějších souborů ------------------------------------------
--- Top 101 nejstarších souborů ------------------------------------------
--- Typy souborů ----------------------------------------------------
-Kategorie --------------------- Množství --- v % ----- Velikost --- v % --
--- Vlastnosti ----------------------------------------------------
-Vlastnosti ------------------- Množství --- v % ----- Velikost --- v % --
--- Seznam složek ---------------------------------------------------
-Složka ----------------------- Množství --- v % ----- Velikost --- v % --
--- Velikosti ----------------------------------------------------
--- Podrobnosti o rozšíření ---------------------------------------------
+================================================================================
+-- Prázdné soubory -------------------------------------------------------------
+-- Prázdné složky --------------------------------------------------------------
+-- Uživatelé -------------------------------------------------------------------
+Název -------------------------------- Množství --- v % ----- Velikost --- v % -
+-- Top 101 největších souborů---------------------------------------------------
+-- Top 101 nejmenších souborů --------------------------------------------------
+-- Top 101 nejnovějších souborů ------------------------------------------------
+-- Top 101 nejstarších souborů -------------------------------------------------
+-- Typy souborů ----------------------------------------------------------------
+Kategorie ----------------------------- Množství --- v % ----- Velikost --- v % 
+-- Vlastnosti ------------------------------------------------------------------
+Vlastnosti ---------------------------- Množství --- v % ----- Velikost --- v % 
+-- Seznam složek ---------------------------------------------------------------
+Složka -------------------------------- Množství --- v % ----- Velikost --- v % 
+-- Velikosti -------------------------------------------------------------------
+-- Podrobnosti o rozšíření -----------------------------------------------------
 Název textové reportu
 Textový report uložen jako
 Kořen neexistuje
@@ -775,10 +775,11 @@ Zobrazení všech ostatních tabulek
 Přihlásít se
 Length
 File Name Length (chars)
--- File Path Length ----------------------------------------------
-Length (chars) --------------- Qty --- As % ----- Size --- As % --
+-- File Path Length ------------------------------------------------------------
+Length (chars) ----------------------------- Qty --- As % ----- Size --- As % --
 No data to export to report.
 (This report can be imported in to Xinorbis at a later date)
 Warning, this scan contains virtual or offline files!
 Warning, scan was stopped before it completed
 Ignore virtual or offline folders
+Deep scan
