--- a/portable/system/languages/IT/language.txt
+++ b/portable/system/languages/IT/language.txt
@@ -591,23 +591,23 @@ Testo
 Colore testo
 File di testo
 Rapporto Testo
-==================================================================
--- File dim. zero ------------------------------------------------
--- Cartelle vuote ------------------------------------------------
--- Utenti --------------------------------------------------------
-Nome ------------------------- Qtà --- In % --- Dim ---- In % ----
--- Primi 101 file più grandi ------------------------------------- 
--- Primi 101 file più piccoli ------------------------------------
--- Primi 101 file più recenti ------------------------------------
--- Primi 101 file più vecchi -------------------------------------
--- Tipi di file --------------------------------------------------
-Categoria -------------------- Qtà --- In % --- Dim ---- In % ----
--- Attributi -----------------------------------------------------
-Attributi -------------------- Qtà --- In % --- Dim ---- In % ----
--- Lista cartelle ------------------------------------------------
-Cartella --------------------- Qtà --- In % --- Dim ---- In % ----
--- Grandezze -----------------------------------------------------
--- Dettagli Estensioni -------------------------------------------
+================================================================================
+-- File dim. zero --------------------------------------------------------------
+-- Cartelle vuote --------------------------------------------------------------
+-- Utenti ----------------------------------------------------------------------
+Nome --------------------------------------- Qtà --- In % --- Dim ---- In % ----
+-- Primi 101 file più grandi --------------------------------------------------- 
+-- Primi 101 file più piccoli --------------------------------------------------
+-- Primi 101 file più recenti --------------------------------------------------
+-- Primi 101 file più vecchi ---------------------------------------------------
+-- Tipi di file ----------------------------------------------------------------
+Categoria ---------------------------------- Qtà --- In % --- Dim ---- In % ----
+-- Attributi -------------------------------------------------------------------
+Attributi ---------------------------------- Qtà --- In % --- Dim ---- In % ----
+-- Lista cartelle --------------------------------------------------------------
+Cartella ----------------------------------- Qtà --- In % --- Dim ---- In % ----
+-- Grandezze -------------------------------------------------------------------
+-- Dettagli Estensioni ---------------------------------------------------------
 Rapporto testo nomefile
 Rapporto Testo salvato come
 Root does not exist
@@ -775,10 +775,11 @@ Tutti gli altri display da tavolo
 Solcometro
 Length
 File Name Length (chars)
--- File Path Length ----------------------------------------------
-Length (chars) --------------- Qty --- As % ----- Size --- As % --
+-- File Path Length ------------------------------------------------------------
+Length (chars) ----------------------------- Qty --- As % ----- Size --- As % --
 No data to export to report.
 (This report can be imported in to Xinorbis at a later date)
 Warning, this scan contains virtual or offline files!
 Warning, scan was stopped before it completed
 Ignore virtual or offline folders
+Deep scan
