--- a/portable/system/languages/RU/language.txt
+++ b/portable/system/languages/RU/language.txt
@@ -591,23 +591,23 @@ TXT
 Цвет текста
 Текстовые файлы
 TXT-отчет
-==================================================================
--- Пустые файлы --------------------------------------------------
--- Пустые папки --------------------------------------------------
--- Пользователи --------------------------------------------------
-Имя ---------------------- Кол-во --- в % ---- Размер ----в % ----
--- 101 наибольших файлов -----------------------------------------
--- 101 наименьших файлов -----------------------------------------
--- 101 новейших файлов -------------------------------------------
--- 101 старейших файлов ------------------------------------------
--- Типы файлов ---------------------------------------------------
-Категория ----------------- Кол-во --- в % ---- Размер ----в % ---
--- Атрибуты ------------------------------------------------------
-Атрибуты ------------------ Кол-во --- в % ---- Размер ----в % ---
--- Список папок --------------------------------------------------
-Папок -------------------- Кол-во --- в % ---- Размер ----в % ----
--- По размерам ---------------------------------------------------
--- О расширении --------------------------------------------------
+================================================================================
+-- Пустые файлы ----------------------------------------------------------------
+-- Пустые папки ----------------------------------------------------------------
+-- Пользователи ----------------------------------------------------------------
+Имя ------------------------------------ Кол-во --- в % ---- Размер ----в % ----
+-- 101 наибольших файлов -------------------------------------------------------
+-- 101 наименьших файлов -------------------------------------------------------
+-- 101 новейших файлов ---------------------------------------------------------
+-- 101 старейших файлов --------------------------------------------------------
+-- Типы файлов -----------------------------------------------------------------
+Категория ------------------------------- Кол-во --- в % ---- Размер ----в % ---
+-- Атрибуты --------------------------------------------------------------------
+Атрибуты -------------------------------- Кол-во --- в % ---- Размер ----в % ---
+-- Список папок ----------------------------------------------------------------
+Папок ---------------------------------- Кол-во --- в % ---- Размер ----в % ----
+-- По размерам -----------------------------------------------------------------
+-- О расширении ----------------------------------------------------------------
 Отчет в формате TXT
 TXT. Отчет сохранен как
 Корень не существует
@@ -775,10 +775,11 @@ Scans
 Журналы
 Length
 File Name Length (chars)
--- File Path Length ----------------------------------------------
-Length (chars) --------------- Qty --- As % ----- Size --- As % --
+-- File Path Length ------------------------------------------------------------
+Length (chars) ----------------------------- Qty --- As % ----- Size --- As % --
 No data to export to report.
 (This report can be imported in to Xinorbis at a later date)
 Warning, this scan contains virtual or offline files!
 Warning, scan was stopped before it completed
 Ignore virtual or offline folders
+Deep scan
