--- a/portable/system/languages/US/language.txt
+++ b/portable/system/languages/US/language.txt
@@ -595,17 +595,17 @@ Text report
 -- Empty Files -----------------------------------------------------------------
 -- Empty Folders ---------------------------------------------------------------
 -- Users -----------------------------------------------------------------------
-Name --------------------------------- Qty ----- As % ----- Size ---- As % -----
+Name ------------------------------------ Qty ----- As % ----- Size ---- As % --
 -- Top 101 Largest Files -------------------------------------------------------
 -- Top 101 Smallest Files ------------------------------------------------------
 -- Top 101 Newest Files --------------------------------------------------------
 -- Top 101 Oldest Files --------------------------------------------------------
 -- File Types ------------------------------------------------------------------
-Category ----------------------------- Qty ----- As % ----- Size ---- As % -----
+Category -------------------------------- Qty ----- As % ----- Size ---- As % --
 -- Attributes ------------------------------------------------------------------
-Attributes --------------------------- Qty ----- As % ----- Size ---- As % -----
+Attributes ------------------------------ Qty ----- As % ----- Size ---- As % --
 -- Folder List -----------------------------------------------------------------
-Folder ------------------------------- Qty ----- As % ----- Size ---- As % -----
+Folder ---------------------------------- Qty ----- As % ----- Size ---- As % --
 -- Magnitudes ------------------------------------------------------------------
 -- Extension Details -----------------------------------------------------------
 Text report filename
@@ -775,10 +775,11 @@ All other table displays
 Logs
 Length
 File Name Length (chars)
--- File Path Length ----------------------------------------------
-Length (chars) --------------- Qty --- As % ----- Size --- As % --
+-- File Path Length ------------------------------------------------------------
+Length (chars) ----------------------------- Qty --- As % ----- Size --- As % --
 No data to export to report.
 (This report can be imported in to Xinorbis at a later date)
 Warning, this scan contains virtual or offline files!
 Warning, scan was stopped before it completed
 Ignore virtual or offline folders
+Deep scan
