--- a/portable/system/languages/UK/language.txt
+++ b/portable/system/languages/UK/language.txt
@@ -783,3 +783,4 @@ Warning, this scan contains virtual or offline files!
 Warning, scan was stopped before it completed
 Ignore virtual or offline folders
 Deep scan
+-- Temporary Files -------------------------------------------------------------
