--- a/portable/system/languages/CAT/language.txt
+++ b/portable/system/languages/CAT/language.txt
@@ -786,3 +786,6 @@ Deep scan
 -- Temporary Files -------------------------------------------------------------
 -- File Datez ------------------------------------------------------------------
 Year --------------------------------------- Qty --- As % ----- Size --- As % --
+ Excluded Folder Pattern :
+-- Dupli catz (Name) -----------------------------------------------------------
+-- Dupli catz (Size) -----------------------------------------------------------
