--- a/portable/system/languages/FR/language.txt
+++ b/portable/system/languages/FR/language.txt
@@ -786,3 +786,6 @@ Deep scan
 -- Temporary Files -------------------------------------------------------------
 -- File Dates ------------------------------------------------------------------
 Year --------------------------------------- Qty --- As % ----- Size --- As % --
+ Excluded Folder Pattern :
+-- Duplicates (Name) -----------------------------------------------------------
+-- Duplicates (Size) -----------------------------------------------------------
