--- a/portable/system/languages/US/language.txt
+++ b/portable/system/languages/US/language.txt
@@ -789,3 +789,4 @@ Year --------------------------------------- Qty --- As % ----- Size --- As % --
  Excluded Folder Pattern :
 -- Duplicates (Name) -----------------------------------------------------------
 -- Duplicates (Size) -----------------------------------------------------------
+-- Benford's Law ---------------------------------------------------------------
